<resources>
    <string name="app_name">TubeAlarm</string>
    <string name="bt_timer_activity">Timer</string>
    <string name="bt_alarm_activity">Alarm</string>
    <string name="app_time">00:00</string>
    <string name="app_add">タイマーのセット</string>
    <string name="app_start">スタート</string>
    <string name="app_reset">リセット</string>

    <string name="dialog_title">時間を作成</string>
    <string name="dialog_msg">時間を選択してください。</string>
    <string name="dialog_btn_ok">作成</string>
    <string name="dialog_btn_ng">キャンセル1</string>
    <string name="dialog_btn_nu">キャンセル</string>
    <string name="dialog_ok_toast">作成しました。</string>
    <string name="dialog_ng_toast">作成をキャンセルしました。</string>
    <string name="dialog_nu_toast">作成をキャンセルしました。</string>
</resources>