<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#444444"
    tools:context=".MainActivity">

    <view
        android:id="@+id/youtube_view"
        class="com.google.android.youtube.player.YouTubePlayerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp" />

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/youtube_view"
        android:layout_alignParentStart="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="100dp"
        android:text="@string/app_time"
        android:textSize="36sp" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_countdown"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="50dp"
        android:onClick="setClick"
        android:text="@string/app_add" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_countdown"
        android:layout_alignParentStart="true"
        android:layout_marginStart="186dp"
        android:layout_marginTop="50dp"
        android:onClick="resetClick"
        android:text="@string/app_reset" />

</RelativeLayout>