<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDDDDD"
    tools:context=".Alarm">

    <view
        android:id="@+id/youtube_view"
        class="com.google.android.youtube.player.YouTubePlayerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp" />

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/youtube_view"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:text="@string/app_time"
        android:textColor="@android:color/black"
        android:textSize="80sp" />

    <Button
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="40dp"
        android:minEms="5"
        android:onClick="clickTimer2"
        android:text="@string/bt_timer_activity"
        android:textSize="24sp" />

    <Button
        android:id="@+id/alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:minEms="5"
        android:onClick="clickAlarm2"
        android:text="@string/bt_alarm_activity"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/text_view_countdown"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@android:drawable/toast_frame"
        android:text="+"
        android:textColor="#FFFFFF"
        android:textSize="36sp" />

</RelativeLayout>